# promodoro-time

./: .dockerignore  .env.template  .gitignore  Dockerfile  docker-compose.test.yaml  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
.github/workflows/: github.ci.yml
alembic/: env.py
alembic/versions/: 2024_12_10_1709-2abe492e2411_init.py  2024_12_10_1743-1027f4f57d48_add_mixin_and_foreign_key.py  2024_12_11_1431-ab638f89bfea_change_field_name.py  2024_12_12_1146-14e89fa9f0bc_.py  2024_12_12_1153-0e433803543f_.py  2024_12_12_1209-3cdb6454b4b2_.py  2024_12_12_1608-b7c7308434bd_.py  2024_12_18_1145-c6b1c8163e1c_add_field_email_to_user_model.py
api/: __init__.py
api/api_v1/: __init__.py  auth.py  categories.py  helpers.py  tasks.py  user.py
auth/: README.md  utils.py
clients/: mail.py
core/: config.py
core/models/: __init__.py  category.py  profile.py  task.py  user.py
core/models/mixins/: created_updated.py
core/schemas/: category.py  task.py  user.py
dependencies/: auth_dependencies.py  category_dependencies.py  mail_dependencies.py  task_dependencies.py  user_dependencies.py
exceptions/: __init__.py  exception.py
middleware/: __init__.py  middleware.py
repository/: base_repository.py  category_repository.py  task_repository.py  user_repository.py
services/: auth_service.py  category_service.py  task_service.py  user_service.py
tasks/: auth_tasks.py
tests/: conftest.py
tests/fixtures/: infrastucture.py
utils/: unitofwork.py
worker/: __init__.py  celery.py
