[tool.poetry]
name = "promodoro-poetry"
version = "0.1.0"
description = ""
authors = ["Danilov Aleksandr <danilov.aa1@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic-settings = "^2.6.1"
orjson = "^3.10.12"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
bcrypt = "^4.2.1"
python-multipart = "^0.0.19"
pytest = {extras = ["async"], version = "^8.3.4"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
